# titerplot

./: .gitignore  CHANGELOG  README.md  pyproject.toml
.github/workflows/: publish.yml
data/: dummy_titers.csv
docs/: plotting-demo.ipynb
notebooks/: plotting-demo.ipynb
src/titerplot/: plotting.py
tests/: test_demos.py
